--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
     
     <nav class="main-nav">
         <div class="nav-content">
-            <div class="logo"><img src="/assets/gl-final-logo.png" alt="Logo"></div>
+            <div class="logo"><img src="assets/gl-final-logo.png" alt="Logo"></div>
             <div class="hamburger">&#9776;</div>
             <ul class="nav-links" id="nav-links">
                 <li><a href="#">Home</a></li>
